roles/openshift_ossm/docs/examples/gateway-injection/istio-ingress-gateway/istio-ingressgateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
spec:
  selector:
    istio: ingressgateway-custom
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
  # Request a specific IP address for this service.
  loadBalancerIP: 192.168.20.16
  type: LoadBalancer
